- Target release - v-0.22 ----------------------- - [DONE] 350. FIX sudden tag lost bug (it is due to add new recipient feature) - [DONE] 352. Fix HTTP forwarded for header for getting the real user - [DONE] 353. On mobile version restaurant details page "add review" should have "Show reviews" and "add review" - [DONE] 347. Filter nearby restaurants by mobile location if browsed from mobile - [DONE] Fixed potential vulnerabilities (suggested by adam through his https://github.com/adamdoupe/find_ear_rails) - [DONE] 354. Optimized image - [DONE] 355. Set small top banner for mobile version

--- a/public/stylesheets/fresh/site.css
+++ b/public/stylesheets/fresh/site.css
@@ -86,6 +86,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   z-index: 1000;
   width: 100%;
+  height: 24px;
 }
 
 #site_top_navigation a {
